src/test/ui/in-band-lifetimes/no_introducing_in_band_in_locals.stderr
error[E0261]: use of undeclared lifetime name `'test`
  --> $DIR/no_introducing_in_band_in_locals.rs:5:13
   |
LL | fn foo(x: &u32) {
   |       - help: consider introducing lifetime `'test` here: `<'test>`
LL |     let y: &'test u32 = x;
   |             ^^^^^ undeclared lifetime

error[E0687]: lifetimes used in `fn` or `Fn` syntax must be explicitly declared using `<...>` binders
  --> $DIR/no_introducing_in_band_in_locals.rs:10:16
   |
LL |     let y: fn(&'test u32) = foo2;
   |                ^^^^^ in-band lifetime definition

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0261, E0687.
For more information about an error, try `rustc --explain E0261`.
